    - cif_compare_dics:
      - started using the UserMessage::sprint_message() subroutine
        to output dictionary comparison results in order to correctly
        escape symbols forbidden by the error message syntax.
    - cif_filter:
      - fixed a problem with global data block distribution;
      - corrected escaping of separators read from .mrk format;
      - removed possibly harmless double conversion of UTF-8 to CIF.
    - cif_fix_values:
      - fixed incorrect sigma extraction routine which caused incorrect
        conversion of numbers with exponents or floating point sigma
        values.
    - cif_sort_atoms:
      - switched to relying only on the '_atom_site_type_symbol' values
        when sorting atoms by their atomic numbers;
      - updated the script to terminate upon encountering errors as was
        originally intended.
    - cif_validate:
      - updated the help message to indicate that '--die-on-errors' is
        the default option instead of '--continue-on-errors'.
    - ddlm_validate:
      - updated the help message to indicate that '--die-on-errors' is
        the default option instead of '--continue-on-errors'.
    - COD::CIF::DDL:
      - replaced Perl 'each @array' construct with a more portable
        one in cif_to_ddlm().
    - COD::CIF::DDL::DDLm::Validate:
      - replaced '\d' with '[0-9]' in several regular expressions.
    - COD::CIF::DDL::Ranges:
      - moved the handling of a Perl capture variable into a conditional
        statement in the parse_range() subroutine.
    - COD::ErrorHandler:
      - moved the handling of a Perl capture variable into a conditional
        statement in the process_errors() subroutine.
    - COD::Formulae::Print:
      - updated the formula construction logic to remove the redundant
        atom counts of '1' that were sometimes accidentally generated.
    - COD::CIF::Tags::Merge:
      - fixed merging of looped onto non-looped data items, and vice
        versa.