@@ -1,0 +1,6 @@
+data_test
+loop_
+_publ_author_name
+'Antis, S\;amoninga'
+'Mangusta, Apsukrioji'
+_journal_name_full               'Crystal Growth & Design'
