@@ -50,7 +50,9 @@ cod-tools (unreleased)
     - cif_filter:
       - fixed a problem with global data block distribution;
       - corrected escaping of separators read from .mrk format;
-      - removed possibly harmless double conversion of UTF-8 to CIF.
+      - removed possibly harmless double conversion of UTF-8 to CIF;
+      - implemented conversion of XML entities to Unicode in values read
+        from .mrk format.
     - cif_fix_values:
       - fixed incorrect sigma extraction routine which caused incorrect
         conversion of numbers with exponents or floating point sigma
